feat: update dropoff and journey endpoints url
